// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfileDropdown /> when in initial state matches snapshot 1`] = `
<div
  className="container"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex="0"
>
  <span
    className="id"
  >
    kschiffer
  </span>
  <Icon
    icon="arrow_drop_down"
    large={false}
    nudgeDown={false}
    nudgeUp={false}
    small={false}
  />
</div>
`;

exports[`<ProfileDropdown /> when in initial state when it has dropdown open matches snapshot 1`] = `
<div
  className="container"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex="0"
>
  <span
    className="id"
  >
    kschiffer
  </span>
  <Icon
    icon="arrow_drop_up"
    large={false}
    nudgeDown={false}
    nudgeUp={false}
    small={false}
  />
  <Dropdown
    className="dropdown"
    larger={false}
    onItemsClick={[Function]}
  >
    <DropdownItem
      exact={false}
      icon="settings"
      link="/profile-settings"
      title="Profile Settings"
    />
    <DropdownItem
      action={[Function]}
      exact={false}
      icon="power_settings_new"
      title="Logout"
    />
  </Dropdown>
</div>
`;
